--- a/platform/platform/tsconfig.base.json
+++ b/platform/platform/tsconfig.base.json
@@ -15,6 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@intelligo/common": ["libs/common/src/index.ts"],
+      "@intelligo/graphql": ["libs/graphql/src/index.ts"],
       "@intelligo/store": ["libs/store/src/index.ts"]
     }
   },
