--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "@intelligo/common": ["libs/common/src/index.ts"],
       "@intelligo/graphql": ["libs/graphql/src/index.ts"],
-      "@intelligo/store": ["libs/store/src/index.ts"]
+      "@intelligo/store": ["libs/store/src/index.ts"],
+      "@intelligo/utils": ["libs/utils/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
